<resources>
    <string name="app_name">TrainingModule4</string>
    <string name="navigation_drawer">BookHub</string>
    <string name="dashboard">Dashboard</string>
    <string name="favourites">Favourites</string>
    <string name="profiles">Profiles</string>
    <string name="aboutapp">AboutApp</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragement">DashBoard Fragemnet</string>
    <string name="fragment_aboutapp">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="fragment_profiles">Fragment Profiles</string>
    <string name="fragment_favourites">Fragment Favourites</string>
    <string name="sample_text">Sample Text</string>
    <string name="author_name">Author Name</string>
    <string name="about_the_book">About the Book</string>
    <string name="add_to_favourites">ADD TO FAVOURITES</string>
    <string name="action_sort">Action_sort</string>
</resources>
