<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboard"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:iconTint="@color/colorAccent"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/favourites"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:iconTint="@color/colorAccent"
            android:iconTintMode="src_in"
            android:title="@string/favourites" />
        <item
            android:id="@+id/Profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:iconTint="@color/colorAccent"
            android:iconTintMode="src_in"
            android:title= "Profile" />
        <item
            android:id="@+id/AboutApp"
            android:icon="@drawable/ic_info_black_24dp"

            android:iconTint="@color/colorAccent"
            android:iconTintMode="src_in"
            android:title="@string/aboutapp" />

    </group>

</menu>