<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DescriptionActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_scrollFlags="scroll|enterAlways"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_description"
        android:background="@drawable/background1">
    <RelativeLayout
        android:layout_below="@id/toolbar_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:id="@+id/BookDetailsDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="6"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/img_book_description"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"


            />

            <RelativeLayout
                android:layout_width="150dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/SampleText1Des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_toRightOf="@id/img_recycler_dashboard"
                    android:text="@string/sample_text"
                    android:textColor="#03fc45"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/SampleText2Des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/SampleText1Des"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@id/img_recycler_dashboard"
                    android:text="@string/author_name"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/price2Description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/SampleText2Des"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_toRightOf="@id/img_recycler_dashboard"
                    android:text="RS.200"
                    android:textColor="#00eeff"
                    android:textSize="15sp"
                    android:textStyle="bold" />


            </RelativeLayout>

            <TextView
                android:id="@+id/ratingDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginLeft="59dp"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_star_black_24dp"
                android:text="4.5"
                android:textColor="#F9FF05"
                android:textSize="15sp"
                android:textStyle="bold" />


        </LinearLayout>

        <TextView
            android:id="@+id/AboutBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/about_the_book"
            android:textSize="16sp"
            android:textColor="#abdddd"
            android:layout_below="@id/BookDetailsDes"
            android:elevation="10dp"/>
        <TextView
            android:id="@+id/txtbookDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/AboutBook"
            android:layout_marginTop="20dp"
            android:text="Hello Blank fragement"
            android:textSize="18sp"
            android:textColor="#abdddd"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="50dp"
            />

        </RelativeLayout>


    </ScrollView>
    <Button
        android:id="@+id/btn_addtofavourites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_favourites"
        android:background="@color/Buttons"
        android:layout_alignParentBottom="true"
        android:textColor="#ffff"/>


    <RelativeLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFF">
    <ProgressBar
        android:id="@+id/Progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>
    </RelativeLayout>

</RelativeLayout>